# VideoPlayer

./: .gitmodules  CMakeLists.txt  README.md
application/: CMakeLists.txt
application/include/: Application.hpp
application/src/: Application.cpp
player/: CMakeLists.txt
player/include/: OpenGL.h  PlayerView.hpp  RenderCanvas.hpp  VideoDecoder.hpp
player/src/: PlayerView.cpp  RenderCanvas.cpp  VideoDecoder.cpp
src/: main.cpp
